Fixing lateral padding on mobile

--- a/mysite/mysite/assets/scss/aboutus.scss
+++ b/mysite/mysite/assets/scss/aboutus.scss
@@ -54,3 +54,10 @@
     position: relative;
     z-index: 2;
 }
+
+@media (max-width: 767.98px) {
+  .mycontainer {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+}
