--- a/mysite/mysite/assets/scss/hero.scss
+++ b/mysite/mysite/assets/scss/hero.scss
@@ -12,3 +12,10 @@
 .newrai-img{
    margin-top: 100px;
 }
+
+@media (max-width: 767.98px) {
+  .mycontainer {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+}
