--- a/mysite/mysite/assets/scss/ourteam.scss
+++ b/mysite/mysite/assets/scss/ourteam.scss
@@ -48,3 +48,10 @@
     position: relative;
     z-index: 1;
 }
+
+@media (max-width: 767.98px) {
+  .mycontainer {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+}
