--- a/mysite/mysite/assets/scss/ourtecnologies.scss
+++ b/mysite/mysite/assets/scss/ourtecnologies.scss
@@ -8,3 +8,10 @@
     font-family: $font-family-base;
     line-height: 1.2;
 }
+
+@media (max-width: 767.98px) {
+  .mycontainer {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+}
