--- a/mysite/mysite/assets/scss/topbar.scss
+++ b/mysite/mysite/assets/scss/topbar.scss
@@ -29,6 +29,7 @@
 
 .navbar-toggler {
   border: 1px solid $secondary;
+  align-self: center;
 }
 
 .navbar-toggler:focus {
